adds Gemfile; changes theme to midnight

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 theme: jekyll-theme-midnight
-paginate: 13
+
+title: alxndr's blog
+description: Notes and other stuff...
+
+github:
+  owner_url: https://alxndr.blog
+  owner_name: Alexander
