fixes link to alxndr.blog
...https doesn't work yet

--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ title: alxndr's blog
 description: Notes and other stuff...
 
 github:
-  owner_url: https://alxndr.blog
+  owner_url: http://alxndr.blog
   owner_name: Alexander
