--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -11,22 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
-
     - uses: actions/cache@v2
-    - name: cache to cache dependencies on servers
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
           ${{ runner.os }}-gems-
-
     - uses: jeffreytse/jekyll-deploy-action@v0.3.1
-    - name: build and deploy to Github
       with:
         provider: 'github'
-        token: ${{ secrets.GITHUB_TOKEN }} # It's your Personal Access Token(PAT)
+        token: ${{ secrets.GITHUB_TOKEN }}
