ops: fix yaml format for nav links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,17 @@
 - title: Blog
-  link: /
+  url: /
 
 - title: Eleven-Twelve
-  link: https://eleven-twelve.net
+  url: https://eleven-twelve.net
 
 - title: drwxrxrx.eth
-  link: drwxrxrx.eth
+  url: drwxrxrx.eth
 
 - title: GitHub
-  link: https://github.com/alxndr
+  url: https://github.com/alxndr
 
 - title: Instagram
-  link: https://instagram.com/drwxrxrx
+  url: https://instagram.com/drwxrxrx
 
 - title: Twitter
-  link: https://twitter.com/drwxrxrx
+  url: https://twitter.com/drwxrxrx
