nav: fix `.eth` "link", add Mastodon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,13 +5,16 @@
   url: https://eleven-twelve.net
 
 - title: drwxrxrx.eth
-  url: drwxrxrx.eth
+  url: https://opensea.io/0x3e4aB72C7437B90251Db110F3D8C2eF073Bb2C46
 
 - title: GitHub
   url: https://github.com/alxndr
 
 - title: Instagram
   url: https://instagram.com/drwxrxrx
+
+- title: Mastodon
+  url: https://mastodon.xyz/@alxndr
 
 - title: Twitter
   url: https://twitter.com/drwxrxrx
