--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ date_format: "%Y-%m-%d"
 title: alxndr's blog
 description: Notes and other stuff...
 url: http://alxndr.blog
+google_analytics: G-RS6J6JRB3C
 
 meta:
   owner_url: http://alxndr.blog
