--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,2 @@
-- title: Blog
+- title: blog home
   url: /
-
-- title: Eleven-Twelve
-  url: https://eleven-twelve.net
-
-- title: drwxrxrx.eth
-  url: https://opensea.io/0x3e4aB72C7437B90251Db110F3D8C2eF073Bb2C46
-
-- title: GitHub
-  url: https://github.com/alxndr
-
-- title: Instagram
-  url: https://instagram.com/drwxrxrx
-
-- title: Mastodon
-  url: https://mastodon.xyz/@alxndr
-  rel: me
-
-- title: Twitter
-  url: https://twitter.com/drwxrxrx
