--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ locale: en-US
 date_format: "%Y %B %-d"
 title_separator: " • "
 title: Alexander's blog
-masthead_title: welcome to alxndr's blog
+masthead_title: ://alxndr.blog
 name: Alexander
 description: mostly notes to myself
 url: http://alxndr.blog
