just got https working??

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: Alexander's blog
 masthead_title: ://alxndr.blog
 name: Alexander
 description: mostly notes to myself
-url: http://alxndr.blog
+url: https://alxndr.blog
 logo: /assets/images/alexander-120x120.png
 og_image: /assets/images/alexander-120x120.png
 paginate: 10
