--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ masthead_title: ://alxndr.blog
 name: Alexander
 description: mostly notes to myself
 url: https://alxndr.blog
+baseurl: /
 logo: /assets/images/alexander-120x120.png
 og_image: /assets/images/alexander-120x120.png
 paginate: 10
