--- a/_config.yml
+++ b/_config.yml
@@ -25,47 +25,47 @@ author:
   bio: a.k.a. `@alxndr` <br/> a.k.a. `@drwxrxrx`
   links:
     - label: photos
-      icon: "fab fa-fw fa-instagram"
+      icon: "fab fa-instagram"
       url: https://instagram.com/drwxrxrx
     - label: tech/politics
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://mastodon.xyz/@alxndr
       rel: me
     - label: music
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://shakedown.social/@ufo_joe
     - label: Lojban
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://mas.to/@rexsa
     - label: Toki Pona
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://toki.social/@lesate
 
 footer:
   links:
     - label: resume
-      icon: "fas fa-fw fa-university"
+      icon: "fas fa-university"
       url: http://alxndr.github.io/resume/resume.html
     - label: GitHub
-      icon: "fab fa-fw fa-github"
+      icon: "fab fa-github"
       url: https://github.com/alxndr
     - label: photos
-      icon: "fab fa-fw fa-instagram"
+      icon: "fab fa-instagram"
       url: https://instagram.com/drwxrxrx
     - label: tech/politics
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://mastodon.xyz/@alxndr
       rel: me
     - label: music
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://shakedown.social/@ufo_joe
       rel: me
     - label: Lojban
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://mas.to/@rexsa
       rel: me
     - label: Toki Pona
-      icon: "fab fa-fw fa-mastodon"
+      icon: "fab fa-mastodon"
       url: https://toki.social/@lesate
       rel: me
 
