--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -10,14 +10,14 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout
-    - uses: actions/cache
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v2
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
           ${{ runner.os }}-gems-
-    - uses: jeffreytse/jekyll-deploy-action
+    - uses: jeffreytse/jekyll-deploy-action@v0.5.0
       with:
         provider: 'github'
         token: ${{ secrets.GITHUB_TOKEN }}
